@@ -1,5 +1,16 @@
 2013-11-22  Anders Carlsson  <andersca@apple.com>
 
+        Move WKPageLoaderClient out into a separate header
+        https://bugs.webkit.org/show_bug.cgi?id=124790
+
+        Reviewed by Dan Bernstein.
+
+        * UIProcess/API/C/WKPage.h:
+        * UIProcess/API/C/WKPageLoaderClient.h: Added.
+        * WebKit2.xcodeproj/project.pbxproj:
+
+2013-11-22  Anders Carlsson  <andersca@apple.com>
+
         Fix 32-bit build.
 
         * UIProcess/API/mac/WKBrowsingContextController.mm:
